modified kernel configs

--- a/kconfigs/qemu.conf
+++ b/kconfigs/qemu.conf
@@ -1,5 +1,7 @@
 CONFIG_TEE=y
 CONFIG_OPTEE=y
+CONFIG_PREEMPT=y
+CONFIG_CPU_SW_DOMAIN_PAN=n
 ### Enable 9P VFS
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
